Implements station details

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
     <!-- bower -->
     <script src="lib/lodash/dist/lodash.min.js"></script>
     <script src="lib/angular-simple-logger/dist/angular-simple-logger.min.js"></script>
-    <script src="lib/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="lib/angular-google-maps/dist/angular-google-maps.min.js"></script>
     <script src="lib/angular-resource/angular-resource.min.js"></script>
     <script src="lib/angular-cache/dist/angular-cache.min.js"></script>
 
@@ -39,6 +39,9 @@
     <!-- application files -->
     <script src="app/components/home/home.module.js"></script>
     <script src="app/components/home/home.controller.js"></script>
+
+    <script src="app/components/station/station.module.js"></script>
+    <script src="app/components/station/station.controller.js"></script>
 
     <script src="app/shared/vlilles/vlilles.service.js"></script>
 
