--- a/www/index.html
+++ b/www/index.html
@@ -42,6 +42,8 @@
 
     <script src="app/shared/vlilles/vlilles.service.js"></script>
 
+    <script src="app/shared/location/location.service.js"></script>
+
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.run.js"></script>
