--- a/www/index.html
+++ b/www/index.html
@@ -44,6 +44,8 @@
 
     <script src="app/shared/location/location.service.js"></script>
 
+    <script src="app/components/test/test.controller.js"></script>
+
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.run.js"></script>
