--- a/www/index.html
+++ b/www/index.html
@@ -46,6 +46,8 @@
 
     <script src="app/shared/navigation/navigation.service.js"></script>
 
+    <script src="app/shared/google-maps/google-maps.component.js"></script>
+
     <script src="app/components/test/test.controller.js"></script>
 
     <script src="app/app.module.js"></script>
