--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,9 @@
 
     <script src="app/shared/navigation/navigation.service.js"></script>
 
+    <script src="app/shared/google-maps/google-maps.module.js"></script>
     <script src="app/shared/google-maps/google-maps.component.js"></script>
+    <script src="app/shared/google-maps/google-maps-tools.service.js"></script>
 
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
