--- a/www/index.html
+++ b/www/index.html
@@ -8,6 +8,7 @@
     <title></title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link rel="stylesheet" href="lib/robotodraft/robotodraft.css">
 
     <!-- compiled css output -->
     <link href="assets/css/ionic.app.css" rel="stylesheet">
