Removes ng-cloak from the body element because of performance issue

--- a/www/index.html
+++ b/www/index.html
@@ -13,7 +13,7 @@
     <!-- compiled css output -->
     <link href="assets/css/ionic.app.css" rel="stylesheet">
 </head>
-<body ng-app="vliller" ng-cloak ng-strict-di>
+<body ng-app="vliller" ng-strict-di>
 
     <ion-nav-view></ion-nav-view>
 
