--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,16 @@
 </head>
 <body ng-app="vliller" ng-strict-di>
 
-    <ion-nav-view></ion-nav-view>
+    <ion-side-menus>
+        <ion-side-menu-content>
+            <ion-nav-view name="home"></ion-nav-view>
+        </ion-side-menu-content>
+
+        <!-- Right menu -->
+        <ion-side-menu side="right">
+            <ui-view name="sidemenu"></ui-view>
+        </ion-side-menu>
+    </ion-side-menus>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -37,6 +46,9 @@
     <!-- application files -->
     <script src="app/components/home/home.module.js"></script>
     <script src="app/components/home/home.controller.js"></script>
+
+    <script src="app/components/sidemenu/sidemenu.module.js"></script>
+    <script src="app/components/sidemenu/sidemenu.controller.js"></script>
 
     <script src="app/shared/vlilles/vlilles.service.js"></script>
 
