Removes useless module file

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-app="vliller" ng-strict-di>
 
-    <ion-side-menus>
+    <ion-side-menus enable-menu-with-back-views="false">
         <ion-side-menu-content>
             <ion-nav-view name="home"></ion-nav-view>
         </ion-side-menu-content>
@@ -56,7 +56,6 @@
 
     <script src="app/shared/navigation/navigation.service.js"></script>
 
-    <script src="app/shared/google-maps/google-maps.module.js"></script>
     <script src="app/shared/google-maps/google-maps-tools.service.js"></script>
 
     <script src="app/app.module.js"></script>
