--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
 </head>
 <body ng-app="vliller" ng-strict-di>
 
-    <ion-side-menus enable-menu-with-back-views="false">
+    <ion-side-menus enable-menu-with-back-views="false" ng-controller="AppController as AppCtrl">
         <ion-side-menu-content>
             <ion-nav-view name="home"></ion-nav-view>
         </ion-side-menu-content>
@@ -59,6 +59,7 @@
     <script src="app/shared/google-maps/google-maps-tools.service.js"></script>
 
     <script src="app/app.module.js"></script>
+    <script src="app/app.controller.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.run.js"></script>
 </body>
