Removes drag content to open side menu

--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
 <body ng-app="vliller" ng-strict-di>
 
     <ion-side-menus enable-menu-with-back-views="false">
-        <ion-side-menu-content>
+        <ion-side-menu-content drag-content="false">
             <ion-nav-view name="home"></ion-nav-view>
         </ion-side-menu-content>
 
