Implements concat+uglify on scripts WIP

--- a/www/index.html
+++ b/www/index.html
@@ -26,11 +26,14 @@
         </ion-side-menu>
     </ion-side-menus>
 
-    <!-- ionic/angularjs js -->
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- cordova script (this will be a 404 during development) -->
     <script src="cordova.js"></script>
+
+    <!-- build:js scripts.js -->
+
+    <!-- ionic/angularjs js -->
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <!-- templates caching -->
     <script src="templates.js"></script>
@@ -61,5 +64,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/app.config.js"></script>
     <script src="app/app.run.js"></script>
+
+    <!-- endbuild -->
 </body>
 </html>
