--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,6 @@
                 'email-label': '',
                 'submit-button-text': 'Envoyer',
                 'submitting-button-text': 'Envoi en cours...',
-
                 'message-success' : 'Message reçu cinq sur cinq ! :-)',
                 'message-error-missing-email': 'Ton adresse email est obligatoire !',
                 'message-error-invalid-email': 'Ton adresse email n\'est pas valide :-/',
@@ -86,12 +85,7 @@
                 'message-error-message-too-short': 'Il semblerait que ton message soit un peu trop court :-/'
             }
         };
-        (function(w, d, t) {
-            var hasLoaded = false;
-            function l() { if (hasLoaded) { return; } hasLoaded = true; window.doorbellOptions.windowLoaded = true; var g = d.createElement(t);g.id = 'doorbellScript';g.type = 'text/javascript';g.async = true;g.src = 'https://embed.doorbell.io/button/4561?t='+(new Date().getTime());(d.getElementsByTagName('head')[0]||d.getElementsByTagName('body')[0]).appendChild(g); }
-            if (w.attachEvent) { w.attachEvent('onload', l); } else if (w.addEventListener) { w.addEventListener('load', l, false); } else { l(); }
-            if (d.readyState == 'complete') { l(); }
-        }(window, document, 'script'));
+        !function(a,b,c){function e(){if(!d){d=!0,window.doorbellOptions.windowLoaded=!0;var a=b.createElement(c);a.id="doorbellScript",a.type="text/javascript",a.async=!0,a.src="https://embed.doorbell.io/button/4561?t="+(new Date).getTime(),(b.getElementsByTagName("head")[0]||b.getElementsByTagName("body")[0]).appendChild(a)}}var d=!1;a.attachEvent?a.attachEvent("onload",e):a.addEventListener?a.addEventListener("load",e,!1):e(),"complete"==b.readyState&&e()}(window,document,"script");
     </script>
 </body>
 </html>
