Bug fix minor iOS bugs

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline' https://embed.doorbell.io/; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://embed.doorbell.io/">
+    <meta http-equiv="Content-Security-Policy" content="default-src gap://ready *; style-src 'self' 'unsafe-inline' https://embed.doorbell.io/; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://embed.doorbell.io/">
 
     <title>vliller</title>
 
