Display offline message WIP

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
     <script src="../lib/angular-resource/angular-resource.min.js"></script>
     <script src="../lib/angular-cache/dist/angular-cache.min.js"></script>
 
-    <script src="../lib/aetm-angular-cordova-network/dist/aetm-angular-cordova-network.min.js"></script>
+    <script src="../lib/aetm-angular-cordova-network/dist/aetm-angular-cordova-network.js"></script>
     <script src="../lib/aetm-angular-cordova-toast/dist/aetm-angular-cordova-toast.min.js"></script>
     <script src="../lib/aetm-angular-resource/dist/aetm-angular-resource.min.js"></script>
 
