--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -15,7 +15,7 @@
 
 <ion-content class="no-scroll">
     <div class="home-content">
-        <map></map>
+        <map [stations]="stations"></map>
         <station-card></station-card>
     </div>
 </ion-content>
