Implements card station WIP

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,6 +16,6 @@
 <ion-content class="no-scroll">
     <div class="home-content">
         <map [stations]="stations"></map>
-        <station-card></station-card>
+        <station-card [station]="activeStation"></station-card>
     </div>
 </ion-content>
