--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -13,7 +13,7 @@
 
 <ion-content class="no-scroll">
     <div class="home-content">
-        <map [stations]="stations" (activeStationChange)="setActiveStation($event)" data-tap-disabled="true"></map>
+        <map [stations]="stations" [userPosition]="currentPosition" (activeStationChange)="setActiveStation($event)" data-tap-disabled="true"></map>
         <station-card [station]="activeStation"></station-card>
         <favorites-button [favoriteStations]="favoriteStations"></favorites-button>
     </div>
