--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,7 +16,7 @@
 
 <ion-content class="no-scroll">
     <div class="home-content">
-        <map [stations]="stations" [userPosition]="currentPosition" (activeStationChange)="setActiveStation($event)" data-tap-disabled="true"></map>
+        <map [stations]="stations" [userPosition]="currentPosition" (activeStationChange)="setActiveStation($event)"></map>
         <station-card [station]="activeStation"></station-card>
         <favorites-button [favoriteStations]="favoriteStations" (favoriteStationClick)="setActiveStation($event)"></favorites-button>
     </div>
