--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -16,8 +16,9 @@
 
 <ion-content class="no-scroll">
     <div class="home-content">
-        <map [stations]="stations" [userPosition]="currentPosition" (activeStationChange)="setActiveStation($event)"></map>
+        <map [stations]="stations" [userPosition]="currentPosition" (activeStationChange)="setActiveStation($event)">
+            <favorites-button [favoriteStations]="favoriteStations" (favoriteStationClick)="setActiveStation($event)"></favorites-button>
+        </map>
         <station-card [station]="activeStation"></station-card>
-        <favorites-button [favoriteStations]="favoriteStations" (favoriteStationClick)="setActiveStation($event)"></favorites-button>
     </div>
 </ion-content>
