--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -20,7 +20,8 @@
             #map
             [stations]="stations"
             [userPosition]="currentPosition"
-            [(activeStation)]="activeStation"
+            [activeStation]="activeStation"
+            (activeStationResumeChange)="setActiveStation($event)"
         >
             <favorites-button
                 [favoriteStations]="favoriteStations"
