--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -4,11 +4,11 @@
         <svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/><path d="M0 0h24v24H0z" fill="none"/></svg>
     </div>
 
-    <header class="sidemenu-header white-border-bottom">
+    <header class="sidemenu-header border-bottom">
         <img class="img-responsive" src="assets/img/vliller-header-sidemenu-logo.svg">
     </header>
 
-    <div class="sidemenu-main white-border-bottom">
+    <div class="sidemenu-main border-bottom">
         <button ion-button block (click)="openBugReport()" class="button-feedback">AIDEZ-NOUS, RAPPORTEZ&nbsp;UN&nbsp;BUG</button>
 
         <button ion-button clear color="light" icon-left (click)="openSocialSharing()">
@@ -27,7 +27,7 @@
         </a>
     </div>
 
-    <div class="sidemenu-about white-border-bottom">
+    <div class="sidemenu-about border-bottom">
         <h4>À propos</h4>
         <button ion-button clear color="light" icon-left (click)="openLink('https://github.com/alexetmanon/vliller')">
             <ion-icon name="logo-github"></ion-icon>
