Hide feedback button

--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -9,7 +9,7 @@
     </header>
 
     <div class="sidemenu-main border-bottom">
-        <button ion-button block (click)="openBugReport()" class="button-feedback">AIDEZ-NOUS, RAPPORTEZ&nbsp;UN&nbsp;BUG</button>
+        <!-- <button ion-button block (click)="openBugReport()" class="button-feedback">AIDEZ-NOUS, RAPPORTEZ&nbsp;UN&nbsp;BUG</button> -->
 
         <button ion-button clear color="light" icon-left (click)="openSocialSharing()">
             <ion-icon name="share"></ion-icon>
