Fix menu toggle button size

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,7 +8,7 @@
                 <location-icon [state]="locationState"></location-icon>
             </button>
         </ion-buttons>
-        <button ion-button menuToggle end>
+        <button class="home-button-menu-toggle" ion-button menuToggle end>
             <ion-icon color="white" name="more"></ion-icon>
         </button>
     </ion-navbar>
