Update Vlille service to use MEL opendata set

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' gap: data: http://dev.alexandrebonhomme.fr; style-src 'self' 'unsafe-inline' https://embed.doorbell.io/; script-src 'self' 'unsafe-inline' https://embed.doorbell.io/; media-src *">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' gap: data: https://opendata.lillemetropole.fr; style-src 'self' 'unsafe-inline' https://embed.doorbell.io/; script-src 'self' 'unsafe-inline' https://embed.doorbell.io/; media-src *">
 
     <title>vliller</title>
 
