--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,7 @@
     <script src="../lib/aetm-angular-cordova-network/dist/aetm-angular-cordova-network.min.js"></script>
     <script src="../lib/aetm-angular-cordova-toast/dist/aetm-angular-cordova-toast.min.js"></script>
     <script src="../lib/aetm-angular-resource/dist/aetm-angular-resource.min.js"></script>
+    <script src="../lib/moment/min/moment-with-locales.min.js"></script>
 
     <!-- application files -->
     <script src="app/components/home/home.module.js"></script>
