Fix padding on vliller web site link

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -27,7 +27,7 @@
 
             <p>Vliller a été conçue dans un objectif de recherche et sans objectif lucratif. Elle utilise des données ouvertes fournies par la Métropole Européenne de Lille. <strong>Elle est gratuite, et aucune donnée tierce n'est ou ne sera revendue.</strong></p>
 
-            <p text-center margin-top>
+            <p text-center padding-top>
                 <a ion-text color="light" href="http://vliller.alexetmanon.com" (click)="openLink('http://vliller.alexetmanon.com')">vliller.alexetmanon.com</a>
             </p>
         </div>
