--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -25,7 +25,7 @@
 
             <p>L'application Vliller vous permet en 1 clic de trouver un vélo libre, ou une place pour garer votre vélo empreinté sur le réseau V'Lille VLS (Vélo Libre Service).</p>
 
-            <p>Vliller a été conçue dans un objectif de recherche et sans objectif lucratif. Elle utilise des données ouvertes fournies par la Métropole Européenne de Lille. <strong>Elle est gratuite, et aucune donnée tierce n'est ou ne sera revendue.</strong></p>
+            <p>Vliller a été conçue dans un objectif de recherche et sans but lucratif. Elle utilise des données ouvertes fournies par la Métropole Européenne de Lille. <strong>Elle est gratuite, et aucune donnée tierce n'est ou ne sera revendue.</strong></p>
 
             <p text-center padding-top>
                 <a ion-text color="light" href="http://vliller.alexetmanon.com" (click)="openLink('http://vliller.alexetmanon.com')">vliller.alexetmanon.com</a>
