Implements contribs page and fix some issues

--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -28,7 +28,7 @@
     </div>
 
     <div class="sidemenu-about">
-        <button ion-button clear color="light" icon-left (click)="openLink('https://github.com/alexetmanon/vliller')">
+        <button ion-button clear color="light" icon-left (click)="openContribsPage()">
             <ion-icon name="code"></ion-icon>
             Sources &amp; contributeurs
         </button>
