--- a/src/services/feedback-form/feedback-form.html
+++ b/src/services/feedback-form/feedback-form.html
@@ -32,7 +32,7 @@
             </ion-item>
 
             <ion-grid margin-top no-padding>
-                <ion-row justify-content-between>
+                <ion-row>
                     <ion-col width-50>
                         <button type="button" ion-button block outline color="secondary" (click)="close()">Annuler</button>
                     </ion-col>
