Update sidemnu wording

--- a/src/pages/sidemenu/sidemenu.html
+++ b/src/pages/sidemenu/sidemenu.html
@@ -13,7 +13,7 @@
 
         <button ion-button clear color="light" icon-left (click)="openSocialSharing()">
             <ion-icon name="share"></ion-icon>
-            Partager avec un Vlilliste
+            Passer le mot
         </button>
 
         <button ion-button clear color="light" icon-left (click)="rateApp()">
