Improve contribs page design

--- a/src/pages/contribs/contribs.html
+++ b/src/pages/contribs/contribs.html
@@ -10,8 +10,8 @@
 
 <ion-content fullscreen>
     <div class="contribs-content" padding>
-        <header text-center padding>
-            <h2>Sources &amp; contributeurs</h2>
+        <header padding>
+            <h2 text-center>Sources &amp; contributeurs</h2>
 
             <p>L'application Vliller a été conçue dans un objectif de recherche ; sans objectif lucratif. Sa conception et son développement repose sur l'engagement de ses usagers et de ses contributeurs.</p>
         </header>
@@ -49,5 +49,6 @@
             </div>
         </div>
     </div>
+    <div class="contribs-bottom-gradient"></div>
     <aetm-footer></aetm-footer>
 </ion-content>
