Implements Toast service

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -31,5 +31,8 @@
             ></favorites-button>
         </map>
         <station-card [station]="activeStation"></station-card>
+
+        <!-- support for toast service -->
+        <toast-component></toast-component>
     </div>
 </ion-content>
