--- a/src/pages/contribs/contribs.html
+++ b/src/pages/contribs/contribs.html
@@ -13,7 +13,7 @@
         <header padding>
             <h2 text-center>Sources &amp; contributeurs</h2>
 
-            <p>L'application Vliller a été conçue dans un objectif de recherche ; sans objectif lucratif. Sa conception et son développement repose sur l'engagement de ses usagers et de ses contributeurs.</p>
+            <p>L'application Vliller a été conçue dans un objectif de recherche&nbsp;; sans objectif lucratif. Sa conception et son développement reposent sur l'engagement de ses usagers et de ses contributeurs.</p>
         </header>
 
         <div padding>
