--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,9 @@
   <!-- Ionic's root component and where the app will load -->
   <ion-app></ion-app>
 
+  <!-- Ocrad 0.25 -->
+  <script src="assets/lib/ocrad.js"></script>
+
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
 
