Fix alignment in feedback form

--- a/src/services/feedback-form/feedback-form.html
+++ b/src/services/feedback-form/feedback-form.html
@@ -15,7 +15,7 @@
         </div>
 
         <form (ngSubmit)="submit()" padding novalidate>
-            <header text-center>
+            <header padding-horizontal text-center>
                 <h2>Remarques &amp; suggestions</h2>
 
                 <p>Tu as repéré un bug&nbsp;? Il te manque une fonctionnalité essentielle&nbsp;? Écris-nous&nbsp;:-)</p>
