Removes scroll from lock code page

--- a/src/pages/code-memo/code-memo.html
+++ b/src/pages/code-memo/code-memo.html
@@ -8,7 +8,7 @@
     </ion-navbar>
 </ion-header>
 
-<ion-content class="code-memo-page" fullscreen>
+<ion-content class="code-memo-page no-scroll" fullscreen>
     <div class="code-memo-content">
         <div padding>
             <div class="code-memo-content-logo" >
