refactor(station-card): remove observable for station card and manage distance computation in parent component

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -34,7 +34,10 @@
                 (favoritesClose)="setMapClickable(true)"
             ></favorites-button>
         </map>
-        <station-card [station]="activeStation"></station-card>
+        <station-card
+            [station]="activeStation | async"
+            [isLoaded]="!isActiveStationRefreshing"
+        ></station-card>
 
         <!-- support for toast service -->
         <toast-component></toast-component>
