refactor(favorites-button): removes observable and fix add favorite bug

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -28,7 +28,7 @@
             (activeStationChange)="setActiveStation($event)"
         >
             <favorites-button
-                [favoriteStations]="favoriteStations"
+                [favoriteStations]="favoriteStations | async"
                 (favoriteStationClick)="setActiveStation($event)"
                 (favoritesOpen)="setMapClickable(false)"
                 (favoritesClose)="setMapClickable(true)"
