feat(debug): Implements store debug module

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -4,6 +4,9 @@
             <img class="img-responsive bar-header-logo" src="assets/img/vliller-header-logo.svg">
         </ion-title>
         <ion-buttons end>
+            <button ion-button icon-only (click)="openStoreDebug()">
+                <ion-icon name="bug"></ion-icon>
+            </button>
             <button ion-button icon-only (click)="openCodeMemoPage()">
                 <!-- lock icon -->
                 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" viewBox="0 0 24 24"><defs><path id="a" d="M.096.625H9.62v7.153H.096V.625z"/></defs><g fill="none" fill-rule="evenodd"><path stroke="#FFF" stroke-linecap="round" stroke-width="2.08" d="M4 14h3.677M4 17h3.677"/><path stroke="#FFF" stroke-linejoin="round" stroke-width="1.971" d="M5 12V9.962c0-.53.432-.962.966-.962h12.068c.533 0 .966.43.966.962v10.076a.964.964 0 0 1-.966.962H5.966A.963.963 0 0 1 5 20.038v-.985"/><g transform="translate(7 .417)"><mask id="b" fill="#fff"><use xlink:href="#a"/></mask><path fill="#FFF" d="M9.62 7.778V5.734c0-2.82-2.134-5.11-4.762-5.11C2.23.625.096 2.915.096 5.735h1.81c0-1.747 1.323-3.167 2.952-3.167 1.628 0 2.952 1.42 2.952 3.167v2.044" mask="url(#b)"/></g></g></svg>
